tree-sitter-mforth/test/corpus/basics.txt
================================================================================
definition with body
================================================================================

: square dup * ;

--------------------------------------------------------------------------------

(source_file
  (definition
    (colon)
    (definition_name)
    (word)
    (word)
    (semicolon)))

================================================================================
line comment
================================================================================

\ this is a comment
42

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (number))

================================================================================
block comment
================================================================================

( a b -- c )
1 2 +

--------------------------------------------------------------------------------

(source_file
  (block_comment)
  (number)
  (number)
  (word))

================================================================================
dot-quote string literal
================================================================================

." hello world"
PRINTFLUSH

--------------------------------------------------------------------------------

(source_file
  (string_literal)
  (word))

================================================================================
s-quote string literal
================================================================================

S" boot"

--------------------------------------------------------------------------------

(source_file
  (string_literal))

================================================================================
IF / ELSE / THEN as words
================================================================================

: abs? dup 0 < IF NEGATE ELSE DROP THEN ;

--------------------------------------------------------------------------------

(source_file
  (definition
    (colon)
    (definition_name)
    (word)
    (number)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (semicolon)))

================================================================================
signed and unsigned integers
================================================================================

-42 0 +7 100

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number)
  (number))

================================================================================
non-standalone colon is a word
================================================================================

:foo bar:baz

--------------------------------------------------------------------------------

(source_file
  (word)
  (word))
