tree-sitter-mforth/test/corpus/defining_words.txt
================================================================================
CREATE / DOES> defining word
================================================================================

: CONSTANT CREATE , DOES> @ ;

--------------------------------------------------------------------------------

(source_file
  (definition
    (colon)
    (definition_name)
    (create)
    (word)
    (does)
    (word)
    (semicolon)))

================================================================================
CONSTANT use site (defining word in action)
================================================================================

42 CONSTANT answer

--------------------------------------------------------------------------------

(source_file
  (number)
  (word)
  (word))

================================================================================
bare CREATE at top level
================================================================================

CREATE table

--------------------------------------------------------------------------------

(source_file
  (create)
  (word))

================================================================================
DOES> outside a definition is still a does token
================================================================================

DOES> @

--------------------------------------------------------------------------------

(source_file
  (does)
  (word))

================================================================================
CREATE / DOES> are case-insensitive words
================================================================================

: const create , does> @ ;

--------------------------------------------------------------------------------

(source_file
  (definition
    (colon)
    (definition_name)
    (create)
    (word)
    (does)
    (word)
    (semicolon)))

================================================================================
macro definition with body
================================================================================

MACRO: cell+ 1 + ;

--------------------------------------------------------------------------------

(source_file
  (macro_definition
    (macro_colon)
    (definition_name)
    (number)
    (word)
    (semicolon)))

================================================================================
macro definition is case-insensitive
================================================================================

macro: twice dup + ;

--------------------------------------------------------------------------------

(source_file
  (macro_definition
    (macro_colon)
    (definition_name)
    (word)
    (word)
    (semicolon)))

================================================================================
non-standalone DOES> prefix is a plain word
================================================================================

DOES>foo CREATEthing

--------------------------------------------------------------------------------

(source_file
  (word)
  (word))
